--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>10k coders</h1>
     <a href="http://127.0.0.1:3000/task2.html">task2</a>
+    <a href="http://127.0.0.1:3000/task3.html">task3</a>
+    <a href="http://127.0.0.1:3000/task4.html">task4</a>
 </body>
 </html>
